# chemistry_be

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  test.db  test.smi
app/: main.py
app/api/api_v1/: molecule.py
app/controller/: molecule.py
app/db/: base.py  session.py
app/models/: molecule.py
app/schemas/: molecule.py
test/: molecule.py
